--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Space Invaders</title>
-    <script src="js/app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>Space Invaders</h1>
-    <<h2>They mostly come at night. Mostly...</h2>
+    <div class="game">
+      <div class="grid">
+    </div>
   </body>
 </html>
