score working on hit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
+  <header>
+    <div class="score">Score</div>
+  </header>
     <div class="game">
       <div class="grid">
     </div>
