stuck on moving all aliens at same time

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   <header>
-    <div class="score">Score</div>
+    <div class="score">0</div>
   </header>
     <div class="game">
       <div class="grid">
