--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
   <header>
     <div class="score">0</div>
-    <button>Reset</button>
+    <button class="reset">Reset</button>
   </header>
     <div class="game">
       <div class="grid">
