working, final version for now

--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>Space Invaders</title>
+    <link href="https://fonts.googleapis.com/css?family=Codystar|Darker+Grotesque|Julius+Sans+One|Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
   <header>
-    <div class="score">0</div>
-    <button class="reset">Reset</button>
+    <div class="scoreContainer">
+      <div class="score">0</div>
+    </div>
+    <p> Space Invaders </p>
+
+    <button class="reset">Play</button>
   </header>
+  <main>
     <div class="game">
       <div class="grid">
     </div>
+  </main>
   </body>
 </html>
