--- a/index.html
+++ b/index.html
@@ -3,25 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Space Invaders</title>
-<<<<<<< HEAD
-=======
     <link href="https://fonts.googleapis.com/css?family=Codystar|Darker+Grotesque|Julius+Sans+One|Poiret+One&display=swap" rel="stylesheet">
->>>>>>> master
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
-<<<<<<< HEAD
     <div class="game">
       <div class="grid">
     </div>
-=======
   <header>
     <div class="scoreContainer">
       <div class="score">0</div>
     </div>
-    <p> Space Invaders </p>
-
+    <p> Space Invaders </p>s
     <button class="reset">Play</button>
   </header>
   <main>
