--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
-    <div class="game">
-      <div class="grid">
-    </div>
   <header>
     <div class="scoreContainer">
       <div class="score">0</div>
     </div>
-    <p> Space Invaders </p>s
+    <p> Space Invaders </p>
+
     <button class="reset">Play</button>
   </header>
   <main>
@@ -23,6 +21,5 @@
       <div class="grid">
     </div>
   </main>
->>>>>>> master
   </body>
 </html>
